[gd_scene load_steps=3 format=2]

[ext_resource path="res://interactive_objects/trap_board.tscn" type="PackedScene" id=1]
[ext_resource path="res://interactive_objects/trap_board_generator.gd" type="Script" id=2]

[node name="TrapBoardGenerator" type="Position2D" groups=["trap_board_generator"]]
script = ExtResource( 2 )
trap_board = ExtResource( 1 )

[node name="VisibilityGenerator" type="VisibilityNotifier2D" parent="."]
position = Vector2( 15, 0.5 )
scale = Vector2( 1.5, 0.05 )

[node name="SpawnTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="screen_entered" from="VisibilityGenerator" to="." method="_on_VisibilityGenerator_screen_entered"]
[connection signal="screen_exited" from="VisibilityGenerator" to="." method="_on_VisibilityGenerator_screen_exited"]
[connection signal="timeout" from="SpawnTime" to="." method="_on_SpawnTime_timeout"]
